Convert classroom views to TSX and add admin fallback

--- a/class-web-app/index.html
+++ b/class-web-app/index.html
@@ -17,6 +17,6 @@
   </head>
   <body class="h-full bg-ivory font-sans text-ellieGray">
     <div id="root" class="h-full"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
