Implement modal login flow with portal support

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   </head>
   <body class="h-full bg-ivory font-sans text-ellieGray">
     <div id="root"></div>
+    <div id="modal-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
